[project]
name = "agent-audit"
version = "0.15.0"
description = "Forensic auditor for local AI coding agents (Claude Code, Codex) + project surface scanner with AST-aware native detectors"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7",
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_audit"]
